.kubernetes/backend-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: pi-calculator-backend
  labels:
    app.kubernetes.io/name: pi-calculator-backend
    app.kubernetes.io/part-of: kubernetes-workshop
    app.kubernetes.io/kubernetes-component: deployment

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pi-calculator-backend
      app.kubernetes.io/part-of: kubernetes-workshop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pi-calculator-backend
        app.kubernetes.io/part-of: kubernetes-workshop
        app.kubernetes.io/kubernetes-component: pod
    spec:
      containers:
        - name: pi-calculator-backend-nginx
          image: nginx:1.19
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: pi-calculator-backend
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 10
            periodSeconds: 3
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 3
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 3
        - name: pi-calculator-backend-php
          image: jeroenvdheuvel/kubernetes-workshop-pi:backend
          imagePullPolicy: Always
          startupProbe:
            exec:
              command: ["/bin/sh", "-c", "env - REQUEST_METHOD=GET SCRIPT_FILENAME=/var/www/html/health.php REQUEST_URI=/health.php HTTP_HOST=localhost HTTPS=1 cgi-fcgi -bind -connect 127.0.0.1:9000 | grep -q 'Status: 204 No Content'"]
            failureThreshold: 10
            periodSeconds: 3
            timeoutSeconds: 3
          readinessProbe:
            exec:
              command: ["/bin/sh", "-c", "env - REQUEST_METHOD=GET SCRIPT_FILENAME=/var/www/html/health.php REQUEST_URI=/health.php HTTP_HOST=localhost HTTPS=1 cgi-fcgi -bind -connect 127.0.0.1:9000 | grep -q 'Status: 204 No Content'"]
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 3
          livenessProbe:
            exec:
              command: ["/bin/sh", "-c", "env - REQUEST_METHOD=GET SCRIPT_FILENAME=/var/www/html/health.php REQUEST_URI=/health.php HTTP_HOST=localhost HTTPS=1 cgi-fcgi -bind -connect 127.0.0.1:9000 | grep -q 'Status: 204 No Content'"]
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
      volumes:
        - name: pi-calculator-backend
          configMap:
            name: pi-calculator-backend
