.kubernetes/frontend-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: pi-calculator-frontend
  labels:
    app.kubernetes.io/name: pi-calculator-frontend
    app.kubernetes.io/part-of: kubernetes-workshop
    app.kubernetes.io/kubernetes-component: deployment

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pi-calculator-frontend
      app.kubernetes.io/part-of: kubernetes-workshop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pi-calculator-frontend
        app.kubernetes.io/part-of: kubernetes-workshop
        app.kubernetes.io/kubernetes-component: pod
    spec:
      containers:
        - name: pi-calculator-frontend
          image: jeroenvdheuvel/kubernetes-workshop-pi:frontend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: pi-calculator-frontend
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 10
            periodSeconds: 3
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 3
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 32Mi
      volumes:
        - name: pi-calculator-frontend
          configMap:
            name: pi-calculator-frontend
